fixed horizontal scrollbar on chromium

--- a/styles/main-hero.css
+++ b/styles/main-hero.css
@@ -1,6 +1,6 @@
 .main-hero {
     background-color: var(--eagle-green);
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
